Changes on openapi spec and controllers for tag based approval
